--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -12,3 +12,32 @@
   padding-left: 10%;
 }
 
+h2 {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+span {
+  font-weight: 600;
+}
+
+p {
+  font-size: 16px;
+}
+
+.friends {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.friend {
+  width: 35%;
+  background-image: linear-gradient(to right, #9acce4, #4aa5cf);
+  box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.3),
+  0 6px 20px 0 rgba(0, 0, 0, 0.8);
+  margin: 5%;
+  padding: 2%;
+  border-radius: 10px;
+  border: solid 3px white;
+}
