--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -3,7 +3,11 @@
 }
 
 .links {
-  margin: 0% 0% 5% 70%;
+  margin: 0% 0% 0% 70%;
+}
+
+label {
+  margin-right: 2px;
 }
 
 .link {
@@ -14,15 +18,16 @@
 
 h2 {
   font-weight: 600;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 span {
   font-weight: 600;
+  font-size: 18px;
 }
 
 p {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .friends {
@@ -36,8 +41,12 @@ p {
   background-image: linear-gradient(to right, #9acce4, #4aa5cf);
   box-shadow: inset 0 4px 8px 0 rgba(0, 0, 0, 0.3),
   0 6px 20px 0 rgba(0, 0, 0, 0.8);
-  margin: 5%;
+  margin: 3%;
   padding: 2%;
   border-radius: 10px;
   border: solid 3px white;
+}
+
+input {
+  margin: 30px 15px 0px 0px;
 }
